--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "files": [
     "dist/",
     "android/src/main/",
-    "android/build.gradle"
+    "android/build.gradle",
+    "android/capacitor.plugins.json"
   ],
   "keywords": [
     "capacitor",
